--- a/app/style/app.css
+++ b/app/style/app.css
@@ -36,6 +36,10 @@ ol, ul {
     outline: none;
 }
 
+.square.partOfWin {
+    background: lightgreen;
+}
+
 .kbd-navigation .square:focus {
     background: #ddd;
 }
