--- a/app/style/app.css
+++ b/app/style/app.css
@@ -19,6 +19,7 @@ ol, ul {
 }
 
 .square {
+    box-sizing: content-box;
     border: 2px solid #999;
     margin-right: -2px;
     margin-top: -2px;
@@ -31,6 +32,22 @@ ol, ul {
     background: #fff;
     float: left;
     text-align: center;
+}
+
+.board-row:first-of-type .square {
+    border-top: none;
+}
+
+.board-row:last-of-type .square {
+    border-bottom: none;
+}
+
+.square:first-of-type {
+    border-left: none;
+}
+
+.square:last-of-type {
+    border-right: none;
 }
 
 .square:focus {
